--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@
 *.zip
 *.tar.gz
 *.rar
+prototipo-ui/prototipo/package-lock.json
+prototipo-ui/prototipo/package.json
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
