--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.password=
 # Para acessar h2, utilizando configuracoes abaixo, acessar localhost:8080/h2-console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.jpa.properties.hibernate.format_sql=true
