Integracao tela login

--- a/comanda-frontend/package.json
+++ b/comanda-frontend/package.json
@@ -21,13 +21,15 @@
     "Renato Vinicius dos Santos <renatods@ciandt.com>",
     "Tiago Fernandes Tasselli <tiagotasselli@ciandt.com>"
   ],
-  "license": "MIT License",  
+  "license": "MIT License",
   "bugs": {
     "url": "https://github.com/murilothink/comanda-blue/issues"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.46",
+    "@material-ui/lab/Alert": "4.0.0-alpha.46",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
