App, TelaLogin e TelaAbrirComanda adiciondados à nova estrutura de pastas

--- a/webapp/src/main/js/package.json
+++ b/webapp/src/main/js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comanda-frontend",
+  "name": "comanda-blue",
   "version": "0.1.0",
   "private": true,
   "description": "Sistema de comandas para restaurantes",
