--- a/webapp/src/main/js/package.json
+++ b/webapp/src/main/js/package.json
@@ -37,7 +37,8 @@
     "react-dom": "^16.13.1",
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-window": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
