Add doc, readme; Fix unico CrossOrigin em ConfigCrossOrigin; Header layout com logout; Fix props.userLogin; Add cor output terminal

--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,7 +1,5 @@
+// Server roda na porta
 server.port=8080
-
-# root URI (default = "/", deixaremos a default para o frontend)
-spring.data.rest.base-path=/api
 
 # data source
 spring.datasource.driverClassName=org.h2.Driver
@@ -14,4 +12,9 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# Mostrar query sql
 #spring.jpa.properties.hibernate.format_sql=true
+
+# Colorir terminal
+spring.main.banner-mode=off 
+spring.output.ansi.enabled=ALWAYS
