--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "comandablue",
+  "name": "comanda-blue",
   "version": "0.1.0",
+  "private": true,
   "description": "Sistema de comandas para restaurantes",
   "repository": {
     "type": "git",
@@ -24,25 +25,40 @@
   "bugs": {
     "url": "https://github.com/murilothink/comanda-blue/issues"
   },
-  "homepage": "https://github.com/murilothink/comanda-blue",
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.46",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "react-router-dom": "^5.1.2"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-qr-reader": "^2.2.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "react-window": "^1.8.5"
   },
   "scripts": {
-    "watch": "webpack --watch -d"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-react": "^7.9.1",
-    "babel-loader": "^8.1.0",
-    "regenerator-runtime": "^0.13.5",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
