Adicionado resourceHandlers para o ConfigCrossOrigin para prover recursos estáticos (imagens, arquivos) na pasta static. NOTA ao adicionar o WebMvcConfigurer esta configuração padrão se perde.
Adicionado devDependencies e script de webpack para package.json na pasta js.

Copiado pasta de imagens para pasta static/img e criado configuração no webpack para mapear estas imagens como URL da pasta static.

Configurado webpack para processar style.css e os outros arquivos.

Ajustado index.html para funcionar adequadamente com o arquivo gerado pelo webpack

--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-// Server roda na porta
+# Server roda na porta
 server.port=8080
+
+spring.data.rest.base-path=/api
 
 # data source
 spring.datasource.driverClassName=org.h2.Driver
