--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -76,6 +76,7 @@
 				<version>1.9.1</version> <!-- Version REF: https://repo1.maven.org/maven2/com/github/eirslett/frontend-maven-plugin/ -->
 
 				<configuration>
+					<workingDirectory>src/main/js</workingDirectory>
 					<installDirectory>target</installDirectory>
 				</configuration>
 
