--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Compiled class file
 *.class
 
+
 # Log file
 *.log
 
@@ -27,3 +28,5 @@ hs_err_pid*
 
 .idea
 
+**/static/built/bundle.js
+**/static/built/bundle.js.map
